# azure-acr

./: Cargo.toml  Dockerfile  README.md  config-sample.toml
acr/: Cargo.toml
acr/src/: main.rs
acr/src/workflow/: deliver_channel.rs  merge_request.rs  mod.rs  task.rs
requester/: Cargo.toml
requester/src/: lib.rs  req.rs  resp.rs
requester/src/setting/: config.rs
src/: lib.rs  main.rs  req.rs  resp.rs
src/setting/: config.rs
src/utils/: cli.rs  datetime_serde.rs  mod.rs  params_construction.rs
src/workflow/: worker.rs
utils/: Cargo.toml
utils/src/: cli.rs  datetime_serde.rs  lib.rs  params_construction.rs
