[package]
name = "acr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
async-trait = "0.1.73"
chrono = { version = "0.4.31", features = ["serde"] }
toml = "0.8.1"
crossbeam-channel = "0.5.8"
anyhow = "1.0.75"
syntect = "5.1.0"
