[package]
name = "requester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
utils = { path = "../utils" }
toml = "0.8.1"
serde_json = "1.0"
anyhow = "1.0.75"
async-trait = "0.1.73"
